--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,11 @@
 kotlin.code.style=official
 kotlinVersion=1.8.22
+
+coroutinesVersion=1.7.1
+
+jacksonVersion=2.14.2
+okhttpVersion=4.10.0
+
+# logging
+logbackVersion=1.4.7
+loggingVersion=3.0.5
