Added acceptance module to test api requests

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,19 @@
+#kotlin
 kotlin.code.style=official
 kotlinVersion=1.8.22
-
 coroutinesVersion=1.7.1
 
+#network and serialization
 jacksonVersion=2.14.2
 okhttpVersion=4.10.0
+ktorVersion=2.2.4
+
+#tests
+kotestVersion=5.5.5
+jUnitJupiterVersion=5.9.2
+testcontainersVersion=1.17.6
 
 # logging
 logbackVersion=1.4.7
 loggingVersion=3.0.5
+kotlinLoggingJvmVersion=3.0.5
