--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,13 @@
 kotlin.code.style=official
 kotlinVersion=1.8.22
 coroutinesVersion=1.7.1
+serializationVersion=1.4.1
 
 #network and serialization
 jacksonVersion=2.14.2
 okhttpVersion=4.10.0
 ktorVersion=2.2.4
+openapiVersion=6.3.0
 
 #tests
 kotestVersion=5.5.5
