Added common and mappers modules

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.code.style=official
 kotlinVersion=1.8.22
 coroutinesVersion=1.7.1
 serializationVersion=1.4.1
+datetimeVersion=0.4.0
 
 #network and serialization
 jacksonVersion=2.14.2
