--- a/specs/specs-question-v1.yaml
+++ b/specs/specs-question-v1.yaml
@@ -442,17 +442,6 @@ components:
           type: string
           description: Описание игры
 
-    GameResponseObject:
-      allOf:
-        - $ref: '#/components/schemas/BaseGame'
-        - type: object
-          description: Игра с id
-          properties:
-            id:
-              $ref: '#/components/schemas/GameId'
-            lock:
-              $ref: '#/components/schemas/Lock'
-
     BaseRound:
       type: object
       description: Базовый класс раунда
@@ -470,17 +459,6 @@ components:
         description:
           type: string
           description: Описание раунд
-
-    RoundResponseObject:
-      allOf:
-        - $ref: '#/components/schemas/BaseRound'
-        - type: object
-          description: Раунд с id
-          properties:
-            id:
-              $ref: '#/components/schemas/RoundId'
-            lock:
-              $ref: '#/components/schemas/Lock'
 
     BaseQuestion:
       type: object
@@ -512,17 +490,6 @@ components:
           description: Элементы для сопоставления
           items:
             $ref: '#/components/schemas/QuestionMatchingTerm'
-
-    QuestionResponseObject:
-      allOf:
-        - $ref: '#/components/schemas/BaseQuestion'
-        - type: object
-          description: Вопрос с id
-          properties:
-            id:
-              $ref: '#/components/schemas/QuestionId'
-            lock:
-              $ref: '#/components/schemas/Lock'
 
     QuestionType:
       type: string
@@ -580,7 +547,11 @@ components:
         - type: object
           properties:
             game:
-              $ref: '#/components/schemas/BaseGame'
+              $ref: '#/components/schemas/GameCreateObject'
+
+    GameCreateObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseGame'
 
     RoundCreateRequest:
       allOf:
@@ -589,7 +560,11 @@ components:
         - type: object
           properties:
             round:
-              $ref: '#/components/schemas/BaseRound'
+              $ref: '#/components/schemas/RoundCreateObject'
+
+    RoundCreateObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseRound'
 
     QuestionCreateRequest:
       allOf:
@@ -598,7 +573,11 @@ components:
         - type: object
           properties:
             question:
-              $ref: '#/components/schemas/BaseQuestion'
+              $ref: '#/components/schemas/QuestionCreateObject'
+
+    QuestionCreateObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseQuestion'
 
     GameReadRequest:
       allOf:
@@ -606,7 +585,14 @@ components:
         - $ref: '#/components/schemas/GameRequestDebug'
         - type: object
           required:
-            - gameId
+            - game
+          properties:
+            game:
+              $ref: '#/components/schemas/GameReadObject'
+
+    GameReadObject:
+      allOf:
+        - type: object
           properties:
             gameId:
               $ref: '#/components/schemas/GameId'
@@ -617,7 +603,14 @@ components:
         - $ref: '#/components/schemas/RoundRequestDebug'
         - type: object
           required:
-            - roundId
+            - round
+          properties:
+            round:
+              $ref: '#/components/schemas/RoundReadObject'
+
+    RoundReadObject:
+      allOf:
+        - type: object
           properties:
             roundId:
               $ref: '#/components/schemas/RoundId'
@@ -628,7 +621,14 @@ components:
         - $ref: '#/components/schemas/QuestionRequestDebug'
         - type: object
           required:
-            - questionId
+            - question
+          properties:
+            question:
+              $ref: '#/components/schemas/QuestionReadObject'
+
+    QuestionReadObject:
+      allOf:
+        - type: object
           properties:
             questionId:
               $ref: '#/components/schemas/QuestionId'
@@ -640,10 +640,15 @@ components:
         - type: object
           required:
             - game
-            - id
           properties:
             game:
-              $ref: '#/components/schemas/BaseGame'
+              $ref: '#/components/schemas/GameUpdateObject'
+
+    GameUpdateObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseGame'
+        - type: object
+          properties:
             id:
               $ref: '#/components/schemas/GameId'
             lock:
@@ -656,10 +661,15 @@ components:
         - type: object
           required:
             - round
-            - id
           properties:
             round:
-              $ref: '#/components/schemas/BaseRound'
+              $ref: '#/components/schemas/RoundUpdateObject'
+
+    RoundUpdateObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseRound'
+        - type: object
+          properties:
             id:
               $ref: '#/components/schemas/RoundId'
             lock:
@@ -672,10 +682,15 @@ components:
         - type: object
           required:
             - question
-            - id
           properties:
             question:
-              $ref: '#/components/schemas/BaseQuestion'
+              $ref: '#/components/schemas/QuestionUpdateObject'
+
+    QuestionUpdateObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseQuestion'
+        - type: object
+          properties:
             id:
               $ref: '#/components/schemas/QuestionId'
             lock:
@@ -687,7 +702,14 @@ components:
         - $ref: '#/components/schemas/GameRequestDebug'
         - type: object
           required:
-            - gameId
+            - game
+          properties:
+            game:
+              $ref: '#/components/schemas/GameDeleteObject'
+
+    GameDeleteObject:
+      allOf:
+        - type: object
           properties:
             gameId:
               $ref: '#/components/schemas/GameId'
@@ -700,7 +722,14 @@ components:
         - $ref: '#/components/schemas/RoundRequestDebug'
         - type: object
           required:
-            - roundId
+            - round
+          properties:
+            round:
+              $ref: '#/components/schemas/RoundDeleteObject'
+
+    RoundDeleteObject:
+      allOf:
+        - type: object
           properties:
             roundId:
               $ref: '#/components/schemas/RoundId'
@@ -713,7 +742,14 @@ components:
         - $ref: '#/components/schemas/QuestionRequestDebug'
         - type: object
           required:
-            - questionId
+            - question
+          properties:
+            question:
+              $ref: '#/components/schemas/QuestionDeleteObject'
+
+    QuestionDeleteObject:
+      allOf:
+        - type: object
           properties:
             questionId:
               $ref: '#/components/schemas/QuestionId'
@@ -725,11 +761,28 @@ components:
         - $ref: '#/components/schemas/IRequest'
         - $ref: '#/components/schemas/GameRequestDebug'
         - type: object
+          required:
+            - selector
+          properties:
+            selector:
+              $ref: '#/components/schemas/GamesSelector'
+
+    GamesSelector:
+      type: object
 
     RoundReadAllRequest:
       allOf:
         - $ref: '#/components/schemas/IRequest'
         - $ref: '#/components/schemas/RoundRequestDebug'
+        - type: object
+          required:
+            - selector
+          properties:
+            selector:
+              $ref: '#/components/schemas/RoundsSelector'
+
+    RoundsSelector:
+      allOf:
         - type: object
           required:
             - gameId
@@ -743,6 +796,15 @@ components:
         - $ref: '#/components/schemas/QuestionRequestDebug'
         - type: object
           required:
+            - selector
+          properties:
+            selector:
+              $ref: '#/components/schemas/QuestionsSelector'
+
+    QuestionsSelector:
+      allOf:
+        - type: object
+          required:
             - gameId
             - roundId
           properties:
@@ -752,6 +814,17 @@ components:
               $ref: '#/components/schemas/RoundId'
 
     # Responses
+
+    GameResponseObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseGame'
+        - type: object
+          description: Игра с id
+          properties:
+            id:
+              $ref: '#/components/schemas/GameId'
+            lock:
+              $ref: '#/components/schemas/Lock'
 
     GameResponseSingle:
       allOf:
@@ -771,6 +844,17 @@ components:
               items:
                 $ref: '#/components/schemas/GameResponseObject'
 
+    RoundResponseObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseRound'
+        - type: object
+          description: Раунд с id
+          properties:
+            id:
+              $ref: '#/components/schemas/RoundId'
+            lock:
+              $ref: '#/components/schemas/Lock'
+
     RoundResponseSingle:
       allOf:
         - type: object
@@ -788,6 +872,17 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/RoundResponseObject'
+
+    QuestionResponseObject:
+      allOf:
+        - $ref: '#/components/schemas/BaseQuestion'
+        - type: object
+          description: Вопрос с id
+          properties:
+            id:
+              $ref: '#/components/schemas/QuestionId'
+            lock:
+              $ref: '#/components/schemas/Lock'
 
     QuestionResponseSingle:
       allOf:
