--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,10 @@ testcontainersVersion=1.17.6
 
 # logging
 logbackVersion=1.4.7
+logbackMoreAppendersVersion=1.8.8
+logbackEncoderVersion=7.4
+janinoVersion=3.1.10
 loggingVersion=3.0.5
 kotlinLoggingJvmVersion=3.0.5
+kermitLoggerVersion=2.0.2
+fluentLoggerVersion=0.3.4
