--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,21 +1,21 @@
 version: '3'
 services:
 
-  app:
-    image: nginx:latest
-    ports:
-      - "8080:80"
-    depends_on:
-      - fluent-bit
-    volumes:
-      - ./volumes/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./volumes/nginx/nginx.conf:/etc/nginx/nginx.conf
-    logging:
-      driver: "fluentd"
-      options:
-        fluentd-address: localhost:24224
-        fluentd-async-connect: "true"
-        tag: app.nginx
+#  app:
+#    image: nginx:latest
+#    ports:
+#      - "8080:80"
+#    depends_on:
+#      - fluent-bit
+#    volumes:
+#      - ./volumes/nginx/default.conf:/etc/nginx/conf.d/default.conf
+#      - ./volumes/nginx/nginx.conf:/etc/nginx/nginx.conf
+#    logging:
+#      driver: "fluentd"
+#      options:
+#        fluentd-address: localhost:24224
+#        fluentd-async-connect: "true"
+#        tag: app.nginx
 
   fluent-bit:
     container_name: fluent-bit
