Added stub biz logic with CoR lib

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,6 @@ loggingVersion=3.0.5
 kotlinLoggingJvmVersion=3.0.5
 kermitLoggerVersion=2.0.2
 fluentLoggerVersion=0.3.4
+
+# Kotlin CoR
+kotlinCorVersion=0.5.5+
