--- a/microservice-question/specs/specs-question-v1.yaml
+++ b/microservice-question/specs/specs-question-v1.yaml
@@ -404,8 +404,10 @@ components:
         - success
         - notFound
         - badId
+        - badType
         - badFormulation
         - badAnswers
         - badTerms
         - badRoundId
         - badGameId
+        - cannotDelete
